--- a/about/index.html
+++ b/about/index.html
@@ -107,29 +107,39 @@
                 
                 
 
+<blockquote>
 <h2 id="contact:6083a88ee3411b0d17ce02d738f69d47">Contact</h2>
 
-<h4 id="qq-1070018473:6083a88ee3411b0d17ce02d738f69d47">QQ:1070018473</h4>
+<ul>
+<li><h4 id="qq-1070018473:6083a88ee3411b0d17ce02d738f69d47">QQ:1070018473</h4>
 
 <h4 id="email-wyb-9-live-com:6083a88ee3411b0d17ce02d738f69d47">Email:wyb_9@live.com</h4>
 
-<h4 id="email-1070018473-qq-com:6083a88ee3411b0d17ce02d738f69d47">Email:1070018473@qq.com</h4>
+<h4 id="email-1070018473-qq-com:6083a88ee3411b0d17ce02d738f69d47">Email:1070018473@qq.com</h4></li>
+</ul>
+</blockquote>
 
 <p><br /></p>
 
+<blockquote>
 <h2 id="about-me:6083a88ee3411b0d17ce02d738f69d47">About me</h2>
 
-<h4 id="不断学习:6083a88ee3411b0d17ce02d738f69d47">==&gt;不断学习</h4>
+<ul>
+<li><h4 id="不断学习:6083a88ee3411b0d17ce02d738f69d47">不断学习</h4>
 
-<h4 id="web安全:6083a88ee3411b0d17ce02d738f69d47">==&gt;Web安全</h4>
+<h4 id="web安全:6083a88ee3411b0d17ce02d738f69d47">Web安全</h4>
 
-<h4 id="努力工作:6083a88ee3411b0d17ce02d738f69d47">==&gt;努力工作</h4>
+<h4 id="努力工作:6083a88ee3411b0d17ce02d738f69d47">努力工作</h4></li>
+</ul>
+</blockquote>
 
 <p><br /></p>
 
+<blockquote>
 <h2 id="about-this-site:6083a88ee3411b0d17ce02d738f69d47">About this site</h2>
 
-<p>本博客站点创建于2016年4月11日</p>
+<ul>
+<li><p>本博客站点创建于2016年4月11日</p>
 
 <h4 id="topics-pentest是关于渗透测试的文章:6083a88ee3411b0d17ce02d738f69d47">Topics: Pentest是关于渗透测试的文章</h4>
 
@@ -143,7 +153,9 @@
 
 <h4 id="topics-miscellanea是生活随笔:6083a88ee3411b0d17ce02d738f69d47">Topics：Miscellanea是生活随笔</h4>
 
-<h4 id="topics-plan是制定计划:6083a88ee3411b0d17ce02d738f69d47">Topics：Plan是制定计划</h4>
+<h4 id="topics-plan是制定计划:6083a88ee3411b0d17ce02d738f69d47">Topics：Plan是制定计划</h4></li>
+</ul>
+</blockquote>
 
 
                 <br /><br />
