--- a/about/index.html
+++ b/about/index.html
@@ -105,9 +105,9 @@
 <ul>
 <li><h4 id="qq-1070018473:6083a88ee3411b0d17ce02d738f69d47">QQ:1070018473</h4>
 
-<h4 id="email-wyb-9-live-com:6083a88ee3411b0d17ce02d738f69d47">Email:wyb_9@live.com</h4>
+<h4 id="email-wyb-9-live-com:6083a88ee3411b0d17ce02d738f69d47">Email:wyb_9#live.com</h4>
 
-<h4 id="email-1070018473-qq-com:6083a88ee3411b0d17ce02d738f69d47">Email:1070018473@qq.com</h4></li>
+<h4 id="email-1070018473-qq-com:6083a88ee3411b0d17ce02d738f69d47">Email:1070018473#qq.com</h4></li>
 </ul>
 </blockquote>
 
