--- a/about/index.html
+++ b/about/index.html
@@ -132,7 +132,7 @@
 <ul>
 <li><p>本博客站点创建于2016年4月11日</p>
 
-<h4 id="topics-pentest是关于渗透测试的文章">Topics: Pentest是关于渗透测试的文章</h4>
+<h4 id="topics-pentest是关于渗透测试的文章">Topics：Pentest是关于渗透测试的文章</h4>
 
 <h4 id="topics-linux是关于linux的学习">Topics：Linux是关于linux的学习</h4>
 
