--- a/about/index.html
+++ b/about/index.html
@@ -132,19 +132,19 @@
 <ul>
 <li><p>本博客站点创建于2016年4月11日</p>
 
-<h4 id="topics-pentest是关于渗透测试的文章">Topics：Pentest是关于渗透测试的文章</h4>
+<h4 id="categories-pentest是关于渗透测试的文章">Categories：Pentest是关于渗透测试的文章</h4>
 
-<h4 id="topics-linux是关于linux的学习">Topics：Linux是关于linux的学习</h4>
+<h4 id="categories-linux是关于linux的学习">Categories：Linux是关于linux的学习</h4>
 
-<h4 id="topics-php是关于php的学习">Topics：PHP是关于PHP的学习</h4>
+<h4 id="categories-php是关于php的学习">Categories：PHP是关于PHP的学习</h4>
 
-<h4 id="topics-python是关于python的学习">Topics：Python是关于Python的学习</h4>
+<h4 id="categories-python是关于python的学习">Categories：Python是关于Python的学习</h4>
 
-<h4 id="topics-server是关于服务搭建的文章">Topics：Server是关于服务搭建的文章</h4>
+<h4 id="categories-server是关于服务搭建的文章">Categories：Server是关于服务搭建的文章</h4>
 
-<h4 id="topics-miscellanea是生活随笔">Topics：Miscellanea是生活随笔</h4>
+<h4 id="categories-miscellanea是生活随笔">Categories：Miscellanea是生活随笔</h4>
 
-<h4 id="topics-plan是制定计划">Topics：Plan是制定计划</h4></li>
+<h4 id="categories-plan是制定计划">Categories：Plan是制定计划</h4></li>
 </ul>
 </blockquote>
 
