--- a/index.html
+++ b/index.html
@@ -121,7 +121,14 @@
 
     
     <p style="max-height:130px;overflow:hidden;line-height:26px;position: relative;word-wrap: break-word !important;z-index:1;">
-        0x00 文件内容  &lt;?xml version='1.0' encoding='UTF-8'?&gt; &lt;books&gt; &lt;book&gt; &lt;name&gt;Python黑帽子&lt;/name&gt; &lt;date&gt;2015&lt;/date&gt; &lt;price&gt;37￥&lt;/price&gt; &lt;description&gt;用python写一些程序&lt;/description&gt; &lt;/book&gt; &lt;book&gt; &lt;name&gt;Web安全深度剖析&lt;/name&gt; &lt;date&gt;2014&lt;/date&gt; &lt;price&gt;39￥&lt;/price&gt; &lt;description&gt;讲述web渗透的基础知识&lt;/description&gt; &lt;/book&gt; &lt;book&gt; &lt;name&gt;白帽子讲web安全&lt;/name&gt; &lt;date&gt;2013&lt;/date&gt; &lt;price&gt;44￥&lt;/price&gt; &lt;description&gt;道哥力作&lt;/description&gt; &lt;/book&gt; &lt;/books&gt;   0x01 读取xml节点  #!/usr/bin/env python # -*- coding: utf-8 -*- from xml.etree import ElementTree as ET tree = ET.parse('test.xml') root = tree.getroot() # root = ET.fromstring(country_data_as_string) #通过字符串导入,直接获取根 childs = root.getchildren() books = [] for child0 in childs: book = {} for child00 in child0.
+        0x00 解析XML的方法  SAX (simple API for XML)
+python 标准库包含SAX解析器，SAX用事件驱动模型，通过在解析XML的过程中触发一个个的事件并调用用户定义的回调函数来处理XML文件。
+ DOM(Document Object Model)
+将XML数据在内存中解析成一个树，通过对树的操作来操作XML。
+ ElementTree(元素树)
+ElementTree就像一个轻量级的DOM，具有方便友好的API。代码可用性好，速度快，消耗内存少。
+   我在这里使用ElementTree  0x01 Element对象的属性  每个Element对象都具有以下属性：
+  tag：string对象，表示数据代表的种类 attrib：dictionary对象，表示附有的属性 text：string对象，表示element的内容 tail：string对象，表示element闭合之后的尾迹 若干子元素（child elements）   &gt;&gt;&gt; from xml.etree import ElementTree as ET &gt;&gt;&gt; xml = &quot;&quot;&quot;&lt;books&gt; ... &lt;book id='37476'&gt;aaaa&lt;/book&gt; ... &lt;book id='83727'&gt;bbbb&lt;/book&gt; ... &lt;/books&gt;&quot;&quot;&quot; &gt;&gt;&gt; root = ET.fromstring(xml) &gt;&gt;&gt; root.tag 'books' &gt;&gt;&gt; child = root.getchildren() &gt;&gt;&gt; child [&lt;Element 'book' at 0x106f59410&gt;, &lt;Element 'book' at 0x106f59450&gt;] &gt;&gt;&gt; child[0].
     </p>
 
     
