--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     
     <p style="max-height:130px;overflow:hidden;line-height:26px;position: relative;word-wrap: break-word !important;z-index:1;">
-        原文链接：http://www.cnblogs.com/JeffreySun/archive/2010/06/24/1627247.html
+        参考链接：http://www.cnblogs.com/JeffreySun/archive/2010/06/24/1627247.html
 0x00 对称加密与非对称加密  对称加密算法的加密和解密秘钥一样，不区分公钥和私钥，秘钥对外保密. 非对称加密算法的加密秘钥和解密秘钥不一样，公钥加密的内容只能由私钥解密，私钥加密的内容只能由公钥解密，其中私钥保密，公钥公开.  0x01 加密通信基本流程  Step1：
 客户端&ndash;&gt;服务器：你好
  Step2：
