--- a/about/index.html
+++ b/about/index.html
@@ -101,18 +101,15 @@
 <blockquote>
 <h2 id="contact">Contact</h2>
 
-<ul>
-<li><h4 id="qq-1070018473">QQ:1070018473</h4>
+<div style="width:350px;">
+    <div style="float:left">
+        <img src="/img/wx.png" style="width:150px;height:150px;" title="添加微信">
+    </div>
+    <div style="float:right;">
+        <img src="/img/qq.png" style="width:150px;height:150px;" title="添加QQ">
+    </div>
+</div>
 
-<h4 id="email-wyb-9-live-com">Email:wyb_9#live.com</h4>
-
-<h4 id="email-1070018473-qq-com">Email:1070018473#qq.com</h4></li>
-</ul>
-</blockquote>
-
-<p><br /></p>
-
-<blockquote>
 <h2 id="about-me">About me</h2>
 
 <ul>
@@ -122,11 +119,7 @@
 
 <h4 id="努力工作">努力工作</h4></li>
 </ul>
-</blockquote>
 
-<p><br /></p>
-
-<blockquote>
 <h2 id="about-this-site">About this site</h2>
 
 <ul>
