--- a/topics/linux/index.html
+++ b/topics/linux/index.html
@@ -550,8 +550,8 @@ DMZ区网段为：172.16.1.0/24  iptables的策略  新建iptables.sh,内容如
 
     
     <p style="max-height:130px;overflow:hidden;line-height:26px;position: relative;word-wrap: break-word !important;z-index:1;">
-         环境： ubuntu14.4
-安装shadowsocks-qt5 sudo add-apt-repository ppa:hzwhuang/ss-qt5（添加源） sudo apt-get update （更新你的软件库） sudo apt-get install shadowsocks-qt5 (正式安装)  配置客户端 配置火狐 访问YouTube 
+         环境：Ubuntu14.04
+0x00 安装shadowsocks-qt5  sudo add-apt-repository ppa:hzwhuang/ss-qt5（添加源） sudo apt-get update （更新你的软件库） sudo apt-get install shadowsocks-qt5 (正式安装)   0x01 配置客户端   0x02 配置火狐   访问YouTube   
     </p>
 
     
