--- a/index.html
+++ b/index.html
@@ -679,8 +679,7 @@ $ sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 0C49F3730359
         </div>
     </div>
     <div class="right">
-        <div>
-            <br>
+        <div style="margin-top:10px;">
             
 
 <div style="padding-bottom:20px;">
