--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         0x00 使用模块 在python执行系统命令一般可以通过3个模块来实现，这三个模块是：os、commands、subprocess
 0x01 os模块执行系统命令 一般用os模块的system函数来执行一些简单的命令
 &gt;&gt;&gt; import os &gt;&gt;&gt; os.system(&quot;pwd&quot;) /Users/reber 0  0x02 commands模块执行系统命令 commands这个模块在python3中被移除了
-&gt;&gt;&gt; import commands &gt;&gt;&gt; commands.getoutput(&quot;pwd&quot;) '/Users/reber' &gt;&gt;&gt; commands.getstatusoutput(&quot;pwd&quot;) (0, '/Users/reber') #返回状态码以及结果  0x03 subprocess模块  task.py代码  def aaa(): s = 0 for x in range(3): time.sleep(1) s += x return s print(aaa())   call函数
+&gt;&gt;&gt; import commands &gt;&gt;&gt; commands.getoutput(&quot;pwd&quot;) '/Users/reber' &gt;&gt;&gt; commands.getstatusoutput(&quot;pwd&quot;) (0, '/Users/reber') #返回状态码以及结果  0x03 subprocess模块执行系统命令  task.py代码  def aaa(): s = 0 for x in range(3): time.sleep(1) s += x return s print(aaa())   call函数执行命令(会阻塞到任务完成)
 函数原型：subprocess.call(args, *, stdin=None, stdout=None, stderr=None, shell=False)  &gt;&gt;&gt; from subprocess import call &gt;&gt;&gt; call([&quot;ls&quot;,&quot;-l&quot;]) #传入一个list total 16 -rw-r--r-- 1 reber staff 80 8 16 16:19 README.
     </p>
 
