--- a/about/index.html
+++ b/about/index.html
@@ -135,9 +135,7 @@
 
 <h4 id="categories-server是关于服务搭建的文章">Categories：Server是关于服务搭建的文章</h4>
 
-<h4 id="categories-miscellanea是生活随笔">Categories：Miscellanea是生活随笔</h4>
-
-<h4 id="categories-plan是制定计划">Categories：Plan是制定计划</h4></li>
+<h4 id="categories-miscellanea是生活随笔">Categories：Miscellanea是生活随笔</h4></li>
 </ul>
 
                 
