--- a/static/links.html
+++ b/static/links.html
@@ -61,7 +61,7 @@
     </div>
     <div>
         <table border="0">
-            <h2>加密&解密</h2>
+            <h2>加密&amp;解密</h2>
             <tr>
                 <td class="td1">md5解密加密</td>
                 <td class="td2"><a href="http://www.cmd5.com">http://www.cmd5.com</a></td>
