--- a/static/links.html
+++ b/static/links.html
@@ -105,7 +105,7 @@
             </tr>
         </table>
     </div>
-    <div>
+    <div class="div2">
         <table border="0">
             <h2>漏洞靶场</h2>
             <tr>
