--- a/static/links.html
+++ b/static/links.html
@@ -6,7 +6,7 @@
     <style type="text/css">
         .div1{width:60%; margin:50px auto auto auto;}
         div{width:60%; margin:0 auto; z-index:-1}
-        .div2{width:60%; margin:auto auto auto 50px;}
+        .div2{width:60%; margin:auto auto 50px auto;}
         table{width: 100%;}
         tr:hover{background-color: #dafdf3;}
         .td1{width: 30%; padding-left:50px;}
