--- a/static/links.html
+++ b/static/links.html
@@ -136,7 +136,7 @@
         var aTagArr = [].slice.apply(document.getElementsByTagName("a"));
 
         aTagArr.forEach(function (e, i) {
-            e.href.indexOf("_blank") > -1 ? e.target = "_blank" : null;
+            e.target = "_blank";
         });
     </script>
 </body>
