--- a/static/links.html
+++ b/static/links.html
@@ -88,8 +88,8 @@
         <table border="0">
             <h2>漏洞学习</h2>
             <tr>
-                <td class="td1">漏洞时代</td>
-                <td class="td2"><a href="http://0day5.com">http://0day5.com</a></td>
+                <td class="td1">Sec-News 安全文摘</td>
+                <td class="td2"><a href="http://wiki.ioin.in">http://wiki.ioin.in</a></td>
             </tr>
             <tr>
                 <td class="td1">T00ls.Net</td>
@@ -102,6 +102,14 @@
             <tr>
                 <td class="td1">Seebug 漏洞平台</td>
                 <td class="td2"><a href="https://www.seebug.org">https://www.seebug.org</a></td>
+            </tr>
+            <tr>
+                <td class="td1">Paper</td>
+                <td class="td2"><a href="https://paper.seebug.org">https://paper.seebug.org</a></td>
+            </tr>
+            <tr>
+                <td class="td1">漏洞时代</td>
+                <td class="td2"><a href="http://0day5.com">http://0day5.com</a></td>
             </tr>
         </table>
     </div>
