--- a/static/links.html
+++ b/static/links.html
@@ -117,12 +117,16 @@
         <table border="0">
             <h2>漏洞靶场</h2>
             <tr>
+                <td class="td1">Medicean/VulApps</td>
+                <td class="td2"><a href="https://github.com/Medicean/VulApps">https://github.com/Medicean/VulApps</a></td>
+            </tr>
+            <tr>
                 <td class="td1">phith0n/vulhub</td>
                 <td class="td2"><a href="https://github.com/phith0n/vulhub">https://github.com/phith0n/vulhub</a></td>
             </tr>
             <tr>
-                <td class="td1">Medicean/VulApps</td>
-                <td class="td2"><a href="https://github.com/Medicean/VulApps">https://github.com/Medicean/VulApps</a></td>
+                <td class="td1">XoneStar/docker-vuln-repo</td>
+                <td class="td2"><a href="https://github.com/XoneStar/docker-vuln-repo">https://github.com/XoneStar/docker-vuln-repo</a></td>
             </tr>
             <tr>
                 <td class="td1">漏洞扫描器测试平台</td>
