--- a/static/links.html
+++ b/static/links.html
@@ -8,8 +8,8 @@
         div{width:60%; margin:0 auto; z-index:-1}
         .div2{width:60%; margin:auto auto 50px auto;}
         table{width: 100%;}
-        tr:hover{background-color: #dafdf3;}
-        .td1{width: 30%; padding-left:50px;}
+        tr:hover{background-color: #999999;}
+        .td1{width: 30%; padding-left:40px;}
         .td2{width: 70%;}
     </style>
 </head>
