--- a/static/links.html
+++ b/static/links.html
@@ -7,9 +7,9 @@
         .div1{width:60%; margin:50px auto auto auto;}
         div{width:60%; margin:0 auto; z-index:-1}
         .div2{width:60%; margin:auto auto 50px auto;}
-        table{width: 100%;}
+        table{width: 100%;padding-left:40px;}
         tr:hover{background-color: #999999;}
-        .td1{width: 30%; padding-left:40px;}
+        .td1{width: 30%;}
         .td2{width: 70%;}
     </style>
 </head>
