--- a/static/links.html
+++ b/static/links.html
@@ -80,7 +80,7 @@
             </tr>
             <tr>
                 <td class="td1">Windows解密</td>
-                <td class="td2"><a href="http://www.chamd5.org">http://www.objectif-securite.ch/en/ophcrack.php</a></td>
+                <td class="td2"><a href="http://www.objectif-securite.ch/en/ophcrack.php">http://www.objectif-securite.ch/en/ophcrack.php</a></td>
             </tr>
         </table>
     </div>
