--- a/static/links.html
+++ b/static/links.html
@@ -120,6 +120,10 @@
                 <td class="td2"><a href="https://paper.seebug.org">https://paper.seebug.org</a></td>
             </tr>
             <tr>
+                <td class="td1">Seebug</td>
+                <td class="td2"><a href="https://www.seebug.org">https://www.seebug.org</a></td>
+            </tr>
+            <tr>
                 <td class="td1">SecWiki</td>
                 <td class="td2"><a href="https://www.sec-wiki.com">https://www.sec-wiki.com</a></td>
             </tr>
@@ -151,6 +155,10 @@
                 <td class="td1">Wooyun Drops镜像</td>
                 <td class="td2"><a href="http://drops.leesec.com">http://drops.leesec.com</a></td>
             </tr>
+            <tr>
+                <td class="td1">Public HackerOne Bug Reports</td>
+                <td class="td2"><a href="https://h1.sintheticlabs.com">https://h1.sintheticlabs.com</a></td>
+            </tr>
         </table>
     </div>
     <div>
@@ -167,6 +175,10 @@
             <tr>
                 <td class="td1">合天网安实验室</td>
                 <td class="td2"><a href="http://www.hetianlab.com">http://www.hetianlab.com</a></td>
+            </tr>
+            <tr>
+                <td class="td1">Hacker101</td>
+                <td class="td2"><a href="https://www.hacker101.com">https://www.hacker101.com</a></td>
             </tr>
         </table>
     </div>
@@ -210,6 +222,14 @@
     <div>
         <table border="0">
             <h2>Cheat Sheet</h2>
+            <tr>
+                <td class="td1">The SQL Injection Knowledge Base</td>
+                <td class="td2"><a href="https://websec.ca/kb/sql_injection">https://websec.ca/kb/sql_injection</a></td>
+            </tr>
+            <tr>
+                <td class="td1">SQL Injection Forum</td>
+                <td class="td2"><a href="http://forum.sqliwiki.com">http://forum.sqliwiki.com</a></td>
+            </tr>
             <tr>
                 <td class="td1">XSS Filter Evasion Cheat Sheet</td>
                 <td class="td2"><a href="https://www.zybuluo.com/laodao/note/9592">https://www.zybuluo.com/laodao/note/9592</a></td>
