--- a/static/links.html
+++ b/static/links.html
@@ -128,6 +128,10 @@
                 <td class="td2"><a href="https://www.sec-wiki.com">https://www.sec-wiki.com</a></td>
             </tr>
             <tr>
+                <td class="td1">安全客</td>
+                <td class="td2"><a href="http://bobao.360.cn/learning/index">http://bobao.360.cn/learning/index</a></td>
+            </tr>
+            <tr>
                 <td class="td1">91Ri</td>
                 <td class="td2"><a href="http://www.91ri.org">http://www.91ri.org</a></td>
             </tr>
