--- a/about/index.html
+++ b/about/index.html
@@ -116,29 +116,17 @@
 <h3 id="about-me">About me</h3>
 
 <ul>
-<li><h4 id="不断学习">不断学习</h4>
+<li><h4 id="网络安全爱好者">网络安全爱好者</h4></li>
 
-<h4 id="web安全">Web安全</h4>
-
-<h4 id="努力工作">努力工作</h4></li>
+<li><h4 id="不断学习-努力工作">不断学习 努力工作</h4></li>
 </ul>
 
 <h3 id="about-this-site">About this site</h3>
 
 <ul>
-<li><p>本博客站点创建于2015年5月6日</p>
-
-<h4 id="categories-pentest是关于渗透测试的文章">Categories：Pentest是关于渗透测试的文章</h4>
-
-<h4 id="categories-linux是关于linux的学习">Categories：Linux是关于linux的学习</h4>
-
-<h4 id="categories-php是关于php的学习">Categories：PHP是关于PHP的学习</h4>
-
-<h4 id="categories-python是关于python的学习">Categories：Python是关于Python的学习</h4>
-
-<h4 id="categories-server是关于服务搭建的文章">Categories：Server是关于服务搭建的文章</h4>
-
-<h4 id="categories-miscellanea是生活随笔">Categories：Miscellanea是生活随笔</h4></li>
+<li>从2015年5月6日开始陆续写博客，博客站点创建于2016年4月</li>
+<li>博客主要用于记录自己的一些学习笔记之类的东西，供自己学习参考使用</li>
+<li>博客部分内容是长时间积累的，所以来源难以查找，如果侵权请与我联系</li>
 </ul>
 
                 
