--- a/static/links.html
+++ b/static/links.html
@@ -23,7 +23,10 @@
             </tr>
             <tr>
                 <td class="td1">在线子域名爆破</td>
-                <td class="td2"><a href="https://phpinfo.me/domain">https://phpinfo.me/domain</a></td>
+                <td class="td2">
+                    <a href="https://phpinfo.me/domain">https://phpinfo.me/domain</a> || 
+                    <a href="http://www.itxueke.com/tools/subdomain">http://www.itxueke.com/tools/subdomain</a>
+                </td>
             </tr>
             <tr>
                 <td class="td1">XSS'OR</td>
