--- a/static/links.html
+++ b/static/links.html
@@ -76,6 +76,10 @@
                 <td class="td1">临时手机号</td>
                 <td class="td2"><a href="https://smsreceivefree.com">https://smsreceivefree.com</a></td>
             </tr>
+            <tr>
+                <td class="td1">邮箱密码社工库</td>
+                <td class="td2"><a href="http://dumpedlqezarfife.onion.lu">http://dumpedlqezarfife.onion.lu</a></td>
+            </tr>
         </table>
     </div>
     <div>
