--- a/links.html
+++ b/links.html
@@ -78,7 +78,10 @@
             </tr>
             <tr>
                 <td class="td1">邮箱密码社工库</td>
-                <td class="td2"><a href="http://dumpedlqezarfife.onion.lu">http://dumpedlqezarfife.onion.lu</a></td>
+                <td class="td2">
+                    <a href="http://dumpedlqezarfife.onion.lu">http://dumpedlqezarfife.onion.lu</a> ||
+                    <a href="https://haveibeenpwned.com">https://haveibeenpwned.com</a>
+                </td>
             </tr>
         </table>
     </div>
