--- a/index.html
+++ b/index.html
@@ -122,16 +122,10 @@
 
     
     <p style="max-height:130px;overflow:hidden;line-height:26px;position: relative;word-wrap: break-word !important;z-index:1;">
-        0x00 环境 PHP：PHP Version 5.5.35
-System： Linux version 2.6.32-504.23.4.el6.x86_64 (Red Hat 4.4.7-11)
-Apache：Apache/2.2.15
-公司出了一些ctf，说要摸底，然后根据答题成绩来分配相应工作。。。。。
+        0x00 环境 公司出了一些ctf，说要摸底，然后根据答题成绩来分配相应工作。。。。。
 其中有一道是php反序列化，直接用的就是 第三届4.29“安恒杯”网络安全技术大赛初赛第三个web题
-我比较菜，这里根据网上已有writeup做一下，记录一下
-0x00 PHP Session 序列化及反序列化处理器 php在session存储和读取时,都会有一个序列化和反序列化的过程，反序列化中会调用对象的magic方法,比如__destruct(),__wakeup()等
-PHP 内置了多种处理器用于存取 $_SESSION 数据，都会对数据进行序列化和反序列化，这几种处理器如下：
---------------------------------------------------------------------------------------------- 处理器 |对应的存储格式 --------------------------------------------------------------------------------------------- php |键名 ＋ 竖线 ＋ 经过 serialize() 函数反序列处理的值 php_binary |键名的长度对应的ASCII字符 ＋ 键名 ＋ 经过 serialize() 函数反序列处理的值 php_serialize (php&gt;=5.5.4) |经过 serialize() 函数反序列处理的数组 ---------------------------------------------------------------------------------------------  如果 PHP 在反序列化存储的 SESSION 数据时使用的处理器和序列化时使用的处理器不同，可能会导致数据无法正确反序列化，经过构造甚至可以执行代码
-0x01 环境设置 POST /phpinfo.php HTTP/1.1 Host: 10.11.11.11 User-Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.
+我比较菜，这里根据网上已有writeup做了一遍，这里记录一下。。。。
+reber@wyb:~$ html cat /proc/version Linux version 4.4.0-31-generic (buildd@lgw01-43) (gcc version 4.8.4 (Ubuntu 4.8.4-2ubuntu1~14.04.3) ) #50~14.04.1-Ubuntu SMP Wed Jul 13 01:07:32 UTC 2016 reber@wyb:~$ html php --version PHP 5.5.9-1ubuntu4.21 (cli) (built: Feb 9 2017 20:54:58) Copyright (c) 1997-2014 The PHP Group Zend Engine v2.5.0, Copyright (c) 1998-2014 Zend Technologies with Zend OPcache v7.0.3, Copyright (c) 1999-2014, by Zend Technologies reber@ubuntu-linux:~$ apachectl -v Server version: Apache/2.
     </p>
 
     
