--- a/links.html
+++ b/links.html
@@ -83,6 +83,13 @@
                     <a href="https://haveibeenpwned.com">https://haveibeenpwned.com</a>
                 </td>
             </tr>
+            <tr>
+                <td class="td1">Exploits查找</td>
+                <td class="td2">
+                    <a href="https://www.exploit-db.com">https://www.exploit-db.com</a> ||
+                    <a href="https://sploitus.com">https://sploitus.com</a>
+                </td>
+            </tr>
         </table>
     </div>
     <div>
