--- a/links.html
+++ b/links.html
@@ -244,7 +244,7 @@
         <table border="0">
             <h2>Cheat Sheet</h2>
             <tr>
-                <td class="td1">The SQL Injection Knowledge Base</td>
+                <td class="td1">SQL Injection Knowledge Base</td>
                 <td class="td2"><a href="https://websec.ca/kb/sql_injection">https://websec.ca/kb/sql_injection</a></td>
             </tr>
             <tr>
