--- a/about/index.html
+++ b/about/index.html
@@ -101,7 +101,13 @@
                 
                 
 
-<h3 id="contact">Contact</h3>
+<h3 id="e-mail">E-mail</h3>
+
+<ul>
+<li>reber0#163.com</li>
+</ul>
+
+<h3 id="wechat-and-qq">WeChat and QQ</h3>
 
 <div style="width:350px;margin-left:40px;margin-top:10px;">
     <div style="float:left">
