--- a/links.html
+++ b/links.html
@@ -166,7 +166,7 @@
             </tr>
             <tr>
                 <td class="td1">SOMD5解密</td>
-                <td class="td2"><a href="https://somd5.com">https://www.somd5.com</a></td>
+                <td class="td2"><a href="https://www.somd5.com">https://www.somd5.com</a></td>
             </tr>
             <tr>
                 <td class="td1">PMD5在线解密</td>
