--- a/static/single.html
+++ b/static/single.html
@@ -15,6 +15,15 @@
 </head>
 <body >
     <div class="div1">
+        <table border="0">
+            <h2>知道创宇研发技能表v3.1</h2>
+            <tr>
+                <td class="td1">知道创宇研发技能表v3.1</td>
+                <td class="td2"><a href="/Knownsec_RD_Checklist_v3/v3.1.html">Knownsec_RD_Checklist_v3</a></td>
+            </tr>
+        </table>
+    </div>
+    <div>
         <table>
             <h2>在线工具</h2>
             <tr>
