--- a/single.html
+++ b/single.html
@@ -19,7 +19,7 @@
             <h2>知道创宇研发技能表v3.1</h2>
             <tr>
                 <td class="td1">知道创宇研发技能表v3.1</td>
-                <td class="td2"><a href="/Knownsec_RD_Checklist_v3/v3.1.html">Knownsec_RD_Checklist_v3</a></td>
+                <td class="td2"><a href="/Knownsec_RD_Checklist_v3.1/v3.1.html">Knownsec_RD_Checklist_v3</a></td>
             </tr>
         </table>
     </div>
