--- a/static/single.html
+++ b/static/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-06-12 11:18:54
+ * @LastEditTime: 2019-07-25 14:21:21
  -->
  <html>
     <head>
@@ -10,6 +10,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico" />
         <title>links</title>
         <style type="text/css">
+            body{background-image: url(./img/single_bg.jpg)}
             .div1{width:65%; margin:50px auto auto auto;}
             .div2{width:65%; margin:auto auto 50px auto;}
             div{width:65%; margin:0 auto; z-index:-1}
@@ -19,7 +20,7 @@
             .td2{width: 70%;}
         </style>
     </head>
-    <body >
+    <body>
         <div class="div1">
             <table>
                 <h2>在线工具</h2>
