--- a/static/single.html
+++ b/static/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-07-25 14:21:21
+ * @LastEditTime: 2019-07-25 14:28:05
  -->
  <html>
     <head>
@@ -81,7 +81,10 @@
                 </tr>
                 <tr>
                     <td class="td1">临时手机号</td>
-                    <td class="td2"><a href="https://smsreceivefree.com">https://smsreceivefree.com</a></td>
+                    <td class="td2">
+                        <a href="https://zusms.com/receiving-sms">https://zusms.com/receiving-sms</a> ||
+                        <a href="https://smsreceivefree.com">https://smsreceivefree.com</a>
+                    </td>
                 </tr>
                 <tr>
                     <td class="td1">邮箱密码社工库</td>
