--- a/about/index.html
+++ b/about/index.html
@@ -84,10 +84,17 @@
                 
                 
 
+<!--
+ * @Author: reber
+ * @Mail: reber0ask@qq.com
+ * @Date: 2019-04-10 10:45:00
+ * @LastEditTime: 2019-07-30 18:55:52
+ -->
+
 <h3 id="e-mail">E-mail</h3>
 
 <ul>
-<li>reber0#163.com</li>
+<li>reber0ask#163.com</li>
 </ul>
 
 <h3 id="wechat-and-qq">WeChat and QQ</h3>
