--- a/about/index.html
+++ b/about/index.html
@@ -88,8 +88,14 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:00
- * @LastEditTime: 2019-07-30 18:55:52
+ * @LastEditTime: 2019-08-13 16:24:26
  -->
+
+<h3 id="id">ID</h3>
+
+<ul>
+<li>reber</li>
+</ul>
 
 <h3 id="e-mail">E-mail</h3>
 
@@ -97,7 +103,7 @@
 <li>reber0ask#163.com</li>
 </ul>
 
-<h3 id="wechat-and-qq">WeChat and QQ</h3>
+<h3 id="wechat-qq">WeChat &amp; QQ</h3>
 
 <div style="width:350px;margin-left:40px;margin-top:10px;display:none;" >
     <div style="float:left">
