--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:00
- * @LastEditTime: 2019-08-13 16:24:26
+ * @LastEditTime: 2019-09-26 12:17:56
  -->
 
 <h3 id="id">ID</h3>
@@ -117,17 +117,26 @@
 <h3 id="about-me">About me</h3>
 
 <ul>
-<li><h4 id="网络安全爱好者">网络安全爱好者</h4></li>
+<li><p>不断学习</p></li>
 
-<li><h4 id="不断学习-努力工作">不断学习 努力工作</h4></li>
+<li><p>努力工作</p></li>
+
+<li><p>网络安全爱好者</p></li>
 </ul>
 
 <h3 id="about-this-site">About this site</h3>
 
 <ul>
-<li>从2015年5月6日开始陆续写博客</li>
+<li>从2015年5月份开始陆续写博客</li>
 <li>博客主要用于记录自己的一些学习笔记之类的东西，供自己学习参考使用</li>
 <li>博客部分内容是长时间积累的，所以来源难以查找，如果侵权请与我联系</li>
+</ul>
+
+<h3 id="about-reprinted">About Reprinted</h3>
+
+<ul>
+<li>只要在文章头部或尾部注明原文链接即可随意转载，如下：
+<img src="/img/about_reprinted.jpg" alt="70" /></li>
 </ul>
 
                 
