--- a/static/single.html
+++ b/static/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-12-16 00:57:34
+ * @LastEditTime: 2019-12-16 01:07:30
  -->
  <html>
     <head>
@@ -40,7 +40,7 @@
                     <td class="td2"><a href="http://ixss.warsong.pw/xssor">http://ixss.warsong.pw/xssor</a></td>
                 </tr>
                 <tr>
-                    <td class="td1">ZoomEye | 钟馗之眼</td>
+                    <td class="td1">ZoomEye(钟馗之眼)</td>
                     <td class="td2"><a href="https://www.zoomeye.org">https://www.zoomeye.org</a></td>
                 </tr>
                 <tr>
@@ -60,24 +60,19 @@
                     <td class="td2"><a href="https://woj.app/multipart.php">https://woj.app/multipart.php</a></td>
                 </tr>
                 <tr>
-                    <td class="td1">站长之家</td>
-                    <td class="td2"><a href="http://tool.chinaz.com">http://tool.chinaz.com</a></td>
-                </tr>
-                <tr>
-                    <td class="td1">爱站网</td>
-                    <td class="td2"><a href="http://www.aizhan.com">http://www.aizhan.com</a></td>
-                </tr>
-                <tr>
-                    <td class="td1">IP 查询</td>
+                    <td class="td1">站长工具</td>
                     <td class="td2">
-                        <a href="https://ip.cn">https://ip.cn</a> ||
-                        <a href="http://www.ip138.com">http://www.ip138.com</a>
+                        <a href="http://tool.chinaz.com">站长之家</a> ||
+                        <a href="http://www.aizhan.com">爱站网</a>
                     </td>
                 </tr>
                 <tr>
-                    <td class="td1">IPIP.NET</td>
+                    <td class="td1">IP 相关查询</td>
                     <td class="td2">
-                        <a href="https://www.ipip.net/">https://www.ipip.net/</a>
+                        <a href="https://ip.cn">IP.cn</a> ||
+                        <a href="http://www.ip138.com">ip138</a> ||
+                        <a href="https://www.ipip.net" title="查询ip、多地ping、查dns等等">IPIP.NET</a> ||
+                        <a href="https://www.ipaddress.com" title="查询ip、域名的信息">IPAddress</a>
                     </td>
                 </tr>
                 <tr>
